--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.14.0",
+		"author" : "Luiz Felipe Schmitt"
 	},
 	"main": "server.js",
 	"scripts": {
@@ -11,5 +12,5 @@
 		"type": "git",
 		"url": "https://idontknow/todo.git"
 	},
-	"author" : "Luiz Felipe Schmitt"
+	
 }
