--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "fcc-learn-npm-package-json",
+	"author" : "Luiz Felipe Schmitt",
 	"dependencies": {
-		"express": "^4.14.0",
-		"author" : "Luiz Felipe Schmitt"
+		"express": "^4.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
@@ -11,6 +11,5 @@
 	"repository": {
 		"type": "git",
 		"url": "https://idontknow/todo.git"
-	},
-	
+	}
 }
